# fabric_bench

./: .gitignore  CMakeLists.txt
benchmark/: CMakeLists.txt  hello_world.cpp  pingpong_asym.cpp  pingpong_prg.cpp  pingpong_prg_test.cpp  pingpong_prg_ucx.cpp  pingpong_sym.cpp  pingpong_sym_ucx.cpp
cmake_modules/: FindFabric.cmake
include/: bench_fabric.hpp  bench_ib.hpp  bench_ib_helper.hpp  bench_mpi.hpp  bench_ofi.hpp  bench_omp.hpp  bench_ucx.hpp  comm_exp.hpp  config.h.in  config.hpp.in  hello_world_util.h  thread_utils.hpp  ucx_util.h
modules/log/: CMakeLists.txt
modules/pmi/: CMakeLists.txt
modules/pmi/pmi1/: CMakeLists.txt
modules/pmi/pmi2/: CMakeLists.txt
pmi/: CMakeLists.txt
pmi/pmi2/: CMakeLists.txt
scripts/: basic-1.sbatch  basic-new.sbatch  misc.sbatch  run-all-configuration-prg.sbatch  run-all-configuration-symmetric.sbatch  run-all-configuration-symmetric.sh  run-prg-all-config.sbatch  run_jobs.sh  run_pingpong_prg.sh  run_pingpong_sym.sh
